Move search bar/info/layout select into own horizontal container that does not collapse. Fixes. Refactors.

--- a/src/components/search/results/expanded-results-layout/expanded-results-layout.css
+++ b/src/components/search/results/expanded-results-layout/expanded-results-layout.css
@@ -1,89 +1,30 @@
 .expanded-results-layout {
-    /* margin: -2rem; */
     flex-grow: 1;
-    display: flex;
-    align-items: stretch;
-    /* display: flex; */
-}
-.expanded-results-layout .results-sidebar {
-    flex: 0;
-    white-space: nowrap;
-}
-.expanded-results-layout .results-sidebar .results-list {
     display: flex;
     flex-direction: column;
-    /* grid-template-columns: auto; */
-    /* grid-template-rows: auto; */
 }
-.expanded-results-layout .results-sidebar .search-form {
+.expanded-results-layout > .expanded-results-upper-container {
+    display: flex;
+}
+.expanded-results-layout > .expanded-results-upper-container > .search-form.with-results {
+    margin: 0;
+    flex-grow: 1;
+    max-width: initial;
+}
+.expanded-results-layout .results-sidebar .search-form.with-results {
     margin-bottom: 0 !important;
 }
-.expanded-results-layout .results-sidebar .search-form.without-results {
-    min-height: auto;
+.expanded-results-layout > .expanded-results-upper-container > .header {
+    white-space: nowrap;
+    margin-left: 32px;
 }
-/* Target the result list `ant-space-item` container */
-.expanded-results-layout .results-sidebar > *:nth-child(3) {
-    /* Force the overflowing list to obey the height specified by flex-grow */
-    height: 0;
+.expanded-results-layout > .expanded-results-lower-container {
+    display: flex;
+    align-items: stretch;
     flex-grow: 1;
-    overflow-y: auto;
-    /**
-     * Cancel out parent/sibling padding & margins and instead apply it as inner padding
-     * This allows for easier scrolling (since the scroll bar isn't overlapping with the children
-     * and also allows prevents shadows from cutting off by allowing them to "overflow".
-     */
-    margin-left: -2rem;
-    padding-left: 2rem;
-    margin-right: -24px;
-    padding-right: 24px;
+    margin-top: 24px;
+    margin-bottom: 24px;
 }
-.expanded-result-option {
-    cursor: pointer;
-    transition: filter 0.25s, background-color 0.25s, color 0.25s;
-}
-.expanded-result-option:hover {
-    /* filter: drop-shadow(0 0 8px rgba(0, 0, 0, 0.1)); */
-    z-index: 1000;
-    /* background-color: rgb(240, 242, 245) */
-    background-color: #e1e5eb;
-}
-.expanded-result-option.selected {
-    background-color: #1890ff !important;
-    color: white;
-}
-.expanded-result-option-card {
-    transition-property: all !important;
-}
-.expanded-result-option-card.selected {
-    background-color: #1890ff !important;
-    color: #fff;
-    filter: brightness(0.925) drop-shadow(0 0 2px rgba(0, 0, 0, 0.05));
-    /* border-color: #1890ff !important; */
-}
-.expanded-result-option-card.selected .ant-card-head-title {
-    /* color: #1890ff !important; */
-    color: #fff;
-}
-.expanded-result-option-card.selected .ant-card-body > .ant-typography {
-    /* color: rgba(0, 0, 0, 0.85); */
-    color: #fff;
-}
-.expanded-result-option-concept-card {
-    /* min-width: min(400px, 90vw); */
-}
-.expanded-result-option-concept-card .ant-card-body {
-    min-height: 0 !important;
-}
-.expanded-result-option-concept-card .ant-card-body::after {
-    /* Remove blurring effect on cards */
-    /* display: none; */
-}
-.expanded-result-option-concept-card.selected {
-    border-color: #1890ff;
-    filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.05)) brightness(0.95) !important;
-}
-
-
 .expanded-result-container {
     flex: 1;
     background: #fff;
@@ -91,7 +32,4 @@
 }
 .expanded-result-container > .ant-card-body {
     padding: 0;
-}
-.expanded-result-container > .ant-space > .ant-space-item > .ant-menu {
-    /* background: none; */
 }
